adds get route for tasks pulling from templates
